# executive-in-a-box

./: .claudeignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TEAM.md  pyproject.toml
.claude/commands/: exec-in-a-box.md
docs/: ARCHETYPE_GUIDE.md  AUTONOMY_GUIDE.md  PROVIDER_GUIDE.md  SETUP_GUIDE.md  SKILL_GUIDE.md  SLACK_GUIDE.md  TAILSCALE_GUIDE.md  WEB_APP_GUIDE.md
hacky-hours/01-ideate/: IDEATION.md  PRODUCT_OVERVIEW.md
hacky-hours/02-design/: ACCESSIBILITY.md  ARCHITECTURE.md  AUDIT_MODEL.md  BUSINESS_LOGIC.md  LICENSING.md  PARITY.md  README.md  SECURITY_PRIVACY.md  STYLE_GUIDE.md  USER_JOURNEYS.md
hacky-hours/02-design/decisions/: 2026-03-21-keychain-credential-storage.md  2026-03-21-python-tech-stack.md  2026-03-21-web-content-fetching.md  2026-04-04-frontend-stack.md  2026-04-04-package-structure.md  2026-04-04-web-ui-pivot.md
hacky-hours/03-roadmap/: ROADMAP.md
hacky-hours/04-build/: BACKLOG.md  CHANGELOG.md
hacky-hours/archive/: ITERATION-v0.2.0.md
hacky-hours/audits/: 2026-04-04-audit.md
src/exec_in_a_box/: __init__.py  __main__.py  all_hands.py  archetypes.py  autonomy.py  board.py  cli_display.py  config.py  credentials.py  jobs.py  providers.py  session.py  setup.py  slack.py  stats.py  storage.py  web.py  wrapper.py
src/exec_in_a_box/server/: __init__.py  app.py
tests/: test_storage.py  test_wrapper.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: AnnounceModal.tsx  ArtifactModal.tsx  ArtifactPane.tsx  ArtifactPanel.tsx  CeoHeroPanel.tsx  (+9 more)
(+13 files in other folders)
