[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "executive-in-a-box"
version = "0.2.0"
description = "AI-powered executive advisor — CEO-level strategic guidance without a human CEO."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Empathetech" },
]
keywords = ["ai", "llm", "strategy", "ceo", "advisor", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "keyring>=25.0.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.25.0",
]

[project.scripts]
exec-in-a-box = "exec_in_a_box.__main__:main"

[project.urls]
Homepage = "https://github.com/empathetech/executive-in-a-box"
Repository = "https://github.com/empathetech/executive-in-a-box"
Issues = "https://github.com/empathetech/executive-in-a-box/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/exec_in_a_box"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
